--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GreenHost - Web Hosting HTML Template</title>
+    <title>Raja Roy Pramotors - About</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo1.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -244,7 +244,7 @@
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h2>Our History</h2>
-                    <h3>Our Most Efficient Year</h3>
+                    <h3 class="text-dark">Our Most Efficient Year</h3>
                 </div>
                 <div class="col-lg-6 py-3 wow fadeInUp" data-wow-delay="0.1s"">
                     <h3 class=" m-5 wow " style="color: black;">RAJA ROY PRAMOTORS,2021</h3>
@@ -261,7 +261,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4" style="height:400px;width: 700px;">
-                    <img src="./img/open1.png" 
+                    <img src="./img/framplotsimage7.jpg" 
                         class="m-5 wow fadeInUp w-100 h-100" data-wow-delay="0.1s" />
                 </div>
             </div>
