--- a/royal-stone-sadashivpet.html
+++ b/royal-stone-sadashivpet.html
@@ -184,7 +184,13 @@
                             <h1 class="mb-2">About Royal Stone Project</h1>
                         </div>
                         <p class="mb-4">
-                            Royal Stone Project epitomizes luxury and sophistication in the realm of real estate, offering an unparalleled living experience. Nestled in prime locations, each aspect of the project reflects meticulous attention to detail and uncompromising quality. From exquisite architecture to state-of-the-art amenities, Royal Stone Project redefines modern living, catering to the discerning tastes of its residents.</p>
+                            Royal Stone is our New Residential Layout in Sadashivapet @ Kamkole, 
+Sangareddy Hyderabad on very close vicinity to Mumbai National Highway 
+(Nh65) with modern amenities and is in proximity to 13000 Acres NIMZ 
+Project, Woxsen University, IIT Hyderabad & MRF Factory near Mumbai 
+national highway (Nh65) which is the fastest growing investor’s hub and is a 
+home to several projects like Pepsi Co., Aurobindo Pharma, Kirby Toshiba, 
+PebsPennar, MRF tyres, NIMZ, WOXSEN etc</p>
                             
                             <p class="mb-4"> With a commitment to excellence, Royal Stone Project promises a harmonious blend of elegance and functionality, ensuring every space is designed to inspire. Whether it's luxurious residences or vibrant community spaces, every facet of the project reflects a dedication to creating an oasis of comfort and opulence.</p>
                             
@@ -255,21 +261,24 @@
                             <br>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Premium HMDA Villa Plots.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>100% Clear Title &amp; Vaasthu.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>24/7 Security, Compound wall around the venture.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Elevated Designed Entrance Arch with Gate.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Blacktop Roads.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Residental Community.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Praposed DTCP Layout</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Clear title and Layout as per 100% vasthu</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>All 33, BT Roads</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage</a></li>
                                     </ul>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground water pipe lines &amp; overhead tank.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Sump tank with water supply lines</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Street Lights</a></li>
                                     <!-- <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Avenue plantation</a></li> -->
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Electricity cabling for every plot.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Modern street lights with transformer.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>3 Years Layout maintenance.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Rain water drain through well connected harvesting Pits.
+                                    </a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Land Scape Gardens in parks and open spaces.
+                                    </a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Ready for construction of Homes 
+                                    </a></li>
                                 </ul>
                             </div>
                             <div class="col-12">
