--- a/navya-milestone-sadasivpet.html
+++ b/navya-milestone-sadasivpet.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GreenHost - Web Hosting HTML Template</title>
+    <title>Raja Roy Pramotors - Projects</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo1.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -183,7 +183,13 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Navya Mile Stone</h1>
                         </div>
-                        <p class="mb-4">Navya Milestone Project is a visionary endeavor in the realm of real estate, poised to redefine urban living. Boasting cutting-edge design and innovative amenities, this project stands as a beacon of modernity and sophistication. Situated in coveted locations, Navya Milestone Project offers an unparalleled lifestyle experience, seamlessly blending luxury and convenience.</p>
+                        <p class="mb-4">Navya Milestone is our New Residential Layout in Sadashivapet @ Kamkole, 
+                            Sangareddy Hyderabad on very close vicinity to Mumbai National Highway 
+                            (Nh65) with modern amenities and is in proximity to 13000 Acres NIMZ 
+                            Project, Woxsen University, IIT Hyderabad & MRF Factory near Mumbai 
+                            national highway (NH65) which is the fastest growing investor’s hub and is a 
+                            home to several projects like Pepsi Co., Aurobindo Pharma, Kirby Toshiba, 
+                            PebsPennar, MRF tyres, NIMZ, WOXSEN etc</p>
 
                             <p class="mb-4"> With a focus on sustainability and community, Navya Milestone Project creates spaces that inspire harmony and well-being. From meticulously crafted residences to vibrant recreational areas, every aspect is tailored to elevate the quality of life for its residents. Embark on a journey of contemporary living with Navya Milestone Project
                              where every detail is crafted to perfection, promising a life of fulfillment and prosperity.</p>
@@ -255,21 +261,21 @@
                             <br>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Premium HMDA Villa Plots.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>100% Clear Title &amp; Vaasthu.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>24/7 Security, Compound wall around the venture.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Elevated Designed Entrance Arch with Gate.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Blacktop Roads.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Residental Community</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>DTCP Approved Layout</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Clear title and Layout as per 100% vasthu </a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>40,33,CC&BT Roads</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage</a></li>
                                     </ul>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground water pipe lines &amp; overhead tank.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Overhead Water tank with Water Supply lines</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Street Lights</a></li>
                                     <!-- <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Avenue plantation</a></li> -->
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Electricity cabling for every plot.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Modern street lights with transformer.</a></li>
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>3 Years Layout maintenance.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Rain Water drain through  well connected harvesting pits</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Land Scape Gardens in parks and open Spaces</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Ready for construction of Homes</a></li>
                                 </ul>
                             </div>
                             <div class="col-12">
