--- a/konapur-sadasivpet.html
+++ b/konapur-sadasivpet.html
@@ -254,16 +254,17 @@
                             <br>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Premium HMDA Villa Plots.</a></li>
+                                    <!-- <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Premium HMDA Villa Plots.</a></li> -->
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>100% Clear Title &amp; Vaasthu.</a></li>
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>24/7 Security, Compound wall around the venture.</a></li>
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Elevated Designed Entrance Arch with Gate.</a></li>
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Blacktop Roads.</a></li>
+                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage.</a></li>
                                     </ul>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <ul class="order_list list-inline-item wow slideInLeft" style="visibility: visible;">
-                                    <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground Drainage.</a></li>
+                                    
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Underground water pipe lines &amp; overhead tank.</a></li>
                                     <!-- <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Avenue plantation</a></li> -->
                                     <li><a href="javascript:void(0)"><span class="flaticon-tick"></span>Electricity cabling for every plot.</a></li>
