--- a/contact.html
+++ b/contact.html
@@ -189,19 +189,27 @@
                 <div class="row g-5">
                     <div class="col-lg-7 col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                            <form action="https://formcarry.com/s/UUlXYOX175l">
+                            <!-- https://formcarry.com/s/UUlXYOX175l -->
+                            <form action="">
                                 <div class="row g-3">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">Your Name</label>
+                                            <label for="name">Enter Your Name *</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="form-floating">
                                             <input type="email" class="form-control" id="email"
                                                 placeholder="Your Email">
-                                            <label for="email">Your Email</label>
+                                            <label for="email">Enter Your Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-floating">
+                                            <input type="number" class="form-control" id="number"
+                                                placeholder="Enter Your Number">
+                                            <label for="number">Enter Your Number *</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
@@ -226,7 +234,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="section-title position-relative mx-auto mb-4 pb-4">
-                            <h3 class="fw-bold mb-0">Customer Support</h3>
+                            <h3 class="fw-bold mb-0 text-dark">Customer Support</h3>
                         </div>
                         <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>402, MATHRUSREE HOMES
                             APARTMENTS, MATHRUSREE NAGAR
@@ -244,6 +252,31 @@
         </div>
         <!-- Contact End -->
 
+        <div class="container-xxl pt-5 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="container">
+              <div
+                class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                data-wow-delay="0.1s"
+                style="max-width: 600px"
+              >
+                <h3 class="mb-1 text-dark">Our Location</h3>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15220.950548588293!2d78.363599!3d17.496166!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92142fffffff%3A0xabf8f98d7db14bd2!2sRAJA%20ROY%20PRAMOTORS!5e0!3m2!1sen!2sus!4v1710506257969!5m2!1sen!2sus"
+                    style="border: 0"
+                    width="100%"
+                    height="500px"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+    
 
         <!-- Footer Start -->
         <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
