--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     placeholder="Your Name"
                                     required
                                   />
-                                  <label for="name">Your Name</label>
+                                  <label for="name">Enter Your Name*</label>
                                 </div>
                               </div>
                               <div class="col-md-12">
@@ -165,7 +165,7 @@
                                     placeholder="Your Email"
                                     required
                                   />
-                                  <label for="email">Your Email</label>
+                                  <label for="email">Enter Your Email*</label>
                                 </div>
                               </div>
                               <div class="col-12">
@@ -1047,7 +1047,7 @@
             data-wow-delay="0.1s"
             style="max-width: 600px"
           >
-            <h3 class="mb-1">Our Location</h3>
+            <h3 class="mb-1 text-dark">Our Location</h3>
           </div>
           <div class="row">
             <div class="col-lg-12">
