--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
                 >
                 <div class="dropdown-menu m-0">
                   <a href="./royal-stone-sadashivpet.html" class="dropdown-item"
-                    >Royal Stone</a
+                    >Royal Stone Project</a
                   >
                   <a
                     href="./navya-milestone-sadasivpet.html"
                     class="dropdown-item"
-                    >Navya Milestone</a
+                    >Navya Milestone Project</a
                   >
                   <a href="./konapur-sadasivpet.html" class="dropdown-item"
-                    >Konapur</a
+                    >Konapur Project</a
                   >
                   <a
                     href="./mango-farm-house-sadashivpet.html"
                     class="dropdown-item"
-                    >Mango Farm House</a
+                    >Mango Farm House Project</a
                   >
                 </div>
               </div>
