--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -64,10 +64,10 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu m-0">
-                                <a href="./royal-stone-sadashivpet.html" class="dropdown-item ">Royal Stone</a>
-                                <a href="./navya-milestone-sadasivpet.html" class="dropdown-item">Navya Milestone</a>
-                                <a href="./konapur-sadasivpet.html" class="dropdown-item">Konapur</a>
-                                <a href="./mango-farm-house-sadashivpet.html" class="dropdown-item">Mango Farm House</a>
+                                <a href="./royal-stone-sadashivpet.html" class="dropdown-item ">Royal Stone Project</a>
+                                <a href="./navya-milestone-sadasivpet.html" class="dropdown-item">Navya Milestone Project</a>
+                                <a href="./konapur-sadasivpet.html" class="dropdown-item">Konapur Project</a>
+                                <a href="./mango-farm-house-sadashivpet.html" class="dropdown-item">Mango Farm House Project</a>
                             </div>
                         </div>
 
@@ -99,21 +99,21 @@
                                                             <div class="form-floating">
                                                                 <input type="text" class="form-control" id="name"
                                                                     placeholder="Your Name" required>
-                                                                <label for="name">Your Name</label>
+                                                                <label for="name">Enter Your Name*</label>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-12">
                                                             <div class="form-floating">
                                                                 <input type="email" class="form-control" id="email"
                                                                     placeholder="Your Email" required>
-                                                                <label for="email">Your Email</label>
+                                                                <label for="email">Enter Your Email*</label>
                                                             </div>
                                                         </div>
                                                         <div class="col-12">
                                                             <div class="form-floating">
                                                                 <input type="text" class="form-control" id="number"
                                                                     placeholder="Enter Your Number" required>
-                                                                <label for="number">Enter Your Number</label>
+                                                                <label for="number">Enter Your Number*</label>
                                                             </div>
                                                         </div>
 
@@ -200,11 +200,7 @@
                             the farmhouse is tailored to enhance the quality of life and provide a sanctuary for
                             relaxation and rejuvenation.</p>
 
-                        <p class="mb-4"> Beyond its picturesque setting, the Mango Farm House Project offers a plethora
-                            of recreational activities and facilities for residents to enjoy. From swimming pools and
-                            outdoor sports courts to lush gardens and picnic areas, there is no shortage of
-                            opportunities for leisure and entertainment. 
-                        </p>
+                       
 
 
 
