--- a/index.html
+++ b/index.html
@@ -940,6 +940,48 @@
         </div>
       </div>
       <!-- Comparison Start -->
+      <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s" >
+        <div class="container px-lg-5">
+          <div
+            class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+            data-wow-delay="0.1s"
+            style="max-width: 600px"
+          >
+            <h3 class="mb-1 text-dark">Our Projects</h3>
+          </div>
+          <div class="owl-carousel projects-carousel">
+            <div
+              class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+            >
+              <div class="projects-img">
+                <img src="./img/project1.jpg" alt="">
+              </div>
+            </div>
+
+            <div
+              class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+            >
+            <div class="projects-img">
+              <img src="./img/project2.jpg" alt="">
+            </div>
+            </div>
+            <div
+              class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+            >
+            <div class="projects-img">
+              <img src="./img/project3.jpg" alt="">
+            </div>
+            </div>
+            <div
+              class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+            >
+            <div class="projects-img">
+              <img src="./img/project4.jpg" alt="">
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <style>
     
       </style>
@@ -1091,7 +1133,7 @@
                             <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
                             <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
                             <a class="btn btn-link" href="./investments.html">Investment</a>
-                            <a class="btn btn-link" href="">Projects</a>
+                            <a class="btn btn-link" href="./royal-stone-sadashivpet.html">Projects</a>
 
                         </div>
                     </div>
@@ -1121,21 +1163,14 @@
         <div class="container px-lg-5">
             <div class="copyright">
                 <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <div class="col-md-12 text-center  mb-3 mb-md-0">Copyright
                         &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
 
 
                         Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
                             Company</a>
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="/">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
 
