--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
               <img
                 class="img-fluid wow zoomIn"
                 data-wow-delay="0.5s"
-                src="img/services-images.jpeg"
+                src="img/grid333.png"
               />
             </div>
           </div>
