--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -64,11 +64,17 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu m-0">
-                                <a href="./royal-stone-sadashivpet.html" class="dropdown-item ">Royal Stone Project</a>
-                                <a href="./navya-milestone-sadasivpet.html" class="dropdown-item">Navya Milestone Project</a>
-                                <a href="./konapur-sadasivpet.html" class="dropdown-item">Konapur Project</a>
-                                <a href="./mango-farm-house-sadashivpet.html" class="dropdown-item">Mango Farm House Project</a>
-                            </div>
+                                <a
+                                  href="./completed-projects.html"
+                                  class="dropdown-item"
+                                  >Completed Projects</a
+                                >
+                                <a href="./on-going-projects.html" class="dropdown-item"
+                                  >On Going Projects</a
+                                >
+                                
+                               
+                              </div>
                         </div>
 
                         <div class="nav-item dropdown">
