--- a/completed-projects.html
+++ b/completed-projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Raja Roy Pramotors - Gallery</title>
+    <title>Raja Roy Pramotors - Completed Projects</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -146,14 +146,8 @@
             <div class="container my-5 py-5 px-lg-5">
                 <div class="row g-5 pt-5">
                     <div class="col-12 text-center text-lg-start">
-                        <h1 class="display-4 text-white animated slideInLeft">Gallery</h1>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
-                                <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                <li class="breadcrumb-item"><a class="text-white" href="#">Gallery</a></li>
-
-                            </ol>
-                        </nav>
+                        <h1 class="display-4 text-white animated slideInLeft">Completed Projects</h1>
+                        
                     </div>
                 </div>
             </div>
@@ -184,68 +178,162 @@
 
 
 
-    <div class="container-xxl gallery">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-lg-12 text-center">
-                    <h4>Our Latest Photos</h4>
+
+    <section id="best-property p-5" class="best-propert our-project container" style="padding-top: 0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="main-title">
+                        <h2 class="wow bounceInDown text-center" data-wow-duration="2s" data-wow-delay="0s" style="
+                visibility: visible;
+                animation-duration: 2s;
+                animation-delay: 0s;
+              ">
+                            Projects
+                        </h2>
+                    </div>
                 </div>
-                
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Dashehari-Mango-Farming1-1024x683 1231.jpg" alt="">
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 project" data-category="btn2">
+                    <div class="content">
+                        <div class="col text-center">
+                            <img src="./img/project4.jpg" height="200" alt="" class="card-img" />
+                        </div>
+                        <div class="col d-flex justify-content-end flex-column">
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Location</p>
+                                <p class=" ">
+                                    <strong>Kamkole, Sadashivpet </strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Total Area</p>
+                                <p class=" ">
+                                    <strong>6.00 Acres</strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Plot Sizes</p>
+                                <p class="" style="font-size: 15px">
+                                    <strong>146 & 170 & 222 & 266 & 300 & 369 Sq.Yards</strong>
+                                </p>
+                            </div>
+
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Site Visit</p>
+                                <p class=" ">
+                                    <a href="tel:+918885667888" class="call-btn">call</a>
+                                </p>
+                            </div>
+                            <div class="row my-2 d-flex justify-content-between align-items-center">
+                                <div class="col-12">
+                                    <a href="./royal-stone-sadashivpet.html" class="text-center project-btn">
+                                        View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/farm (1).jpeg" alt="">
+
+                <div class="col-md-4 project" data-category="btn2">
+                    <div class="content">
+                        <div class="col">
+                            <img src="./img/project2.jpg" height="200" alt="" class="card-img" />
+                        </div>
+                        <div class="col d-flex justify-content-end flex-column">
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Location</p>
+                                <p class=" ">
+                                    <strong>Konapur, Sadashivpet </strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Total Area</p>
+                                <p class=" ">
+                                    <strong>6.01 Acres</strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Plot Sizes</p>
+                                <p class=" ">
+                                    <strong>165 & 180 & 200 Sq. Yards </strong>
+                                </p>
+                            </div>
+
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Site Visit</p>
+                                <p class=" ">
+                                    <a href="+918885667888" class="call-btn">call</a>
+                                </p>
+                            </div>
+                            <div class="row my-2 d-flex justify-content-between align-items-center">
+                                <div class="col-12">
+                                    <a href="./konapur-sadasivpet.html" class="text-center project-btn">
+                                        View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/farm (7).jpeg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/farmplotsimage4.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/framplotsimage7.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallery3.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/framplotimage6.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/swimming.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/putha mangos.jpeg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/construction1.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/construction2.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/construction3.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/open-plots (1).jpeg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/open-plots (2).jpeg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/open-plots (3).jpeg" alt="">
+
+                <div class="col-md-4 project" data-category="btn2">
+                    <div class="content">
+                        <div class="col">
+                            <img src="./img/project1.jpg" height="200" alt="" class="card-img" />
+                        </div>
+                        <div class="col d-flex justify-content-end flex-column">
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Location</p>
+                                <p class=" ">
+                                    <strong>Kamkole, Sadashivpet </strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Total Area</p>
+                                <p class=" ">
+                                    <strong>6.00 Acres</strong>
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Plot Sizes</p>
+                                <p class=" ">
+                                    <strong>183,178,183,199,219,279,393,493 Sq.
+                                        yards</strong>
+                                </p>
+                            </div>
+
+                            <div class="d-flex align-items-center justify-content-between pt-3"
+                                style="border-bottom: 2px solid #070707">
+                                <p class=" ">Site Visit</p>
+                                <p class=" ">
+                                    <a href="+918885667888" class="call-btn">CALL</a>
+                                </p>
+                            </div>
+                            <div class="row my-2 d-flex justify-content-between align-items-center">
+                                <div class="col-12">
+                                    <a href="./navya-milestone-sadasivpet.html" class="text-center project-btn">
+                                        View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <style>
-        .gallery img {
-            width: 100%;
-        }
-    </style>
-
-
+    </section>
 
     <!-- Footer Start -->
     <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
