--- a/completed-projects.html
+++ b/completed-projects.html
@@ -336,7 +336,7 @@
     </section>
 
     <!-- Footer Start -->
-    <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid  text-white footer  wow fadeIn" data-wow-delay="0.1s">
 
         <div class="container pt-1 pb-4 px-lg-5">
             <div class="row gy-5 gx-4 pt-5">
