--- a/open-plots.html
+++ b/open-plots.html
@@ -239,7 +239,7 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-lg-12 text-center mt-4">
-                        <h4>Our Open-Plots Photos</h4>
+                        <h4 class="text-white ">Our Open-Plots Photos</h4>
                     </div>
                    
                     <div class="col-lg-4 col-md-6 p-2">
@@ -279,7 +279,7 @@
 
 
         <!-- Footer Start -->
-        <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid  text-white footer  wow fadeIn" data-wow-delay="0.1s">
 
             <div class="container pt-1 pb-4 px-lg-5">
                 <div class="row gy-5 gx-4 pt-5">
