--- a/royal-stone-sadashivpet.html
+++ b/royal-stone-sadashivpet.html
@@ -234,8 +234,7 @@ PebsPennar, MRF tyres, NIMZ, WOXSEN etc</p>
                             <tr>
                                 <th>Total Area</th>
                                 <th>Plot Sizes</th>
-                                <th>Residential Price</th>
-                                <th>Commercial Price</th>
+                               
 
                             </tr>
                         </thead>
@@ -346,7 +345,7 @@ PebsPennar, MRF tyres, NIMZ, WOXSEN etc</p>
   
 
         <!-- Footer Start -->
-        <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid  text-white footer  wow fadeIn" data-wow-delay="0.1s">
 
             <div class="container pt-1 pb-4 px-lg-5">
                 <div class="row gy-5 gx-4 pt-5">
