--- a/gallery.html
+++ b/gallery.html
@@ -239,6 +239,18 @@
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/client.jpg" alt="">
                 </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/gallery12.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/gallery123.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/gallery1234.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/gallery12345.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
