--- a/gallery.html
+++ b/gallery.html
@@ -251,6 +251,9 @@
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/gallery12345.jpg" alt="">
                 </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/framplotsimage3.jpg.jpeg" alt="">
+                </div>
             </div>
         </div>
     </div>
