--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Spinner End -->
 
       <div class="container-xxl position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 ">
           <a href="" class="navbar-brand p-0">
             <img src="./img/logo.jpeg" alt="Logo" />
           </a>
@@ -334,7 +334,9 @@
           </div>
         </div>
       </div>
-
+<script>
+  
+</script>
       <!-- About End -->
       <div class="call">
         <a href="tel:+918885667888">
