--- a/index.html
+++ b/index.html
@@ -1124,10 +1124,11 @@
                 <div class="row">
                     <div class="col-md-12 text-center  mb-3 mb-md-0">Copyright
                         &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
+                        
 
 
                         Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
-                            Company</a>
+                            Company</a> | <a href="privacy-policy.html">Privacy Policy</a>
                     </div>
                    
                 </div>
