--- a/gallery.html
+++ b/gallery.html
@@ -254,6 +254,15 @@
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/framplotsimage3.jpg.jpeg" alt="">
                 </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/img1.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/img2.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/img3.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
