--- a/index.html
+++ b/index.html
@@ -206,11 +206,7 @@
                   <p class="text-white animated slideInLeft">
                     WE ARE GIVING THE BEST TO MAKE YOUR DREAMS
                   </p>
-                  <a
-                    href=""
-                    class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft"
-                    >Contact Us</a
-                  >
+                  
                 </div>
                 <!-- <div class="col-lg-6 text-center  text-lg-start ">
                                 <img class="img-fluid animated zoomIn hero-image"
@@ -228,11 +224,7 @@
                     WE ARE GIVING THE BEST TO MAKE YOUR DREAMS
                   </p>
 
-                  <a
-                    href="./contact.html"
-                    class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft"
-                    >Contact Us</a
-                  >
+                  
                 </div>
                 <!-- <div class="col-lg-6 text-center text-lg-start  hero-img">
                                 <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
@@ -370,6 +362,7 @@
                     visibility: visible;
                     animation-duration: 2s;
                     animation-delay: 0s;
+                    margin-top: 20px;
                   "
                 >
                   Our Projects
@@ -911,32 +904,39 @@
           <div class="owl-carousel projects-carousel">
             <div
               class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
-            >
+            ><a href="mango-farm-house-sadashivpet.html">
               <div class="projects-img">
                 <img src="./img/project1.jpg" alt="">
               </div>
+            </a>
             </div>
 
             <div
               class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
             >
+            <a href="konapur-sadasivpet.html">
             <div class="projects-img">
               <img src="./img/project2.jpg" alt="">
             </div>
+            </a>
             </div>
             <div
               class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
             >
+            <a href="navya-milestone-sadasivpet.html">
             <div class="projects-img">
               <img src="./img/project3.jpg" alt="">
             </div>
+            </a>
             </div>
             <div
               class="project-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
             >
+            <a href="royal-stone-sadashivpet.html">
             <div class="projects-img">
               <img src="./img/project4.jpg" alt="">
             </div>
+            </a>
             </div>
           </div>
         </div>
