--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class=" ">
-                      <strong> Kamkole, China Chelmeda, Sadashivpet </strong>
+                    <p class="ml-3">
+                      <strong> Kamkole,  Sadashivpet </strong>
                     </p>
                   </div>
                   <div
