--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class=" ">
+                    <p class="ml-3 ">
                       <strong>Kamkole, Sadashivpet </strong>
                     </p>
                   </div>
@@ -480,7 +480,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class=" ">
+                    <p class="ml-3 ">
                       <strong>Konapur, Sadashivpet </strong>
                     </p>
                   </div>
@@ -561,7 +561,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Plot Sizes</p>
-                    <p class=" ">
+                    <p class=" "style="mar>
                       <strong>3,4,5,6 and 7.5 Guntas</strong>
                     </p>
                   </div>
@@ -606,7 +606,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class=" ">
+                    <p class="" style="margin-left: 33px;">
                       <strong>Kamkole, Sadashivpet </strong>
                     </p>
                   </div>
@@ -624,7 +624,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Plot Sizes</p>
-                    <p class=" ">
+                    <p class=" " style="margin-left: 20px;">
                       <strong
                         >183 & 178 & 183 & 199 & 219 & 279 & 393 & 493 Sq.
                         yards</strong
