--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class="ml-3 ">
+                    <p class=" " style="margin-left: 33px;">
                       <strong>Kamkole, Sadashivpet </strong>
                     </p>
                   </div>
@@ -432,7 +432,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Plot Sizes</p>
-                    <p class="" style="font-size: 15px">
+                    <p class=" " style="margin-left: 20px;" >
                       <strong
                         >146 & 170 & 222 & 266 & 300 & 369 Sq.Yards</strong
                       >
@@ -480,7 +480,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class="ml-3 ">
+                    <p class="" style="margin-left: 33px;">
                       <strong>Konapur, Sadashivpet </strong>
                     </p>
                   </div>
@@ -498,7 +498,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Plot Sizes</p>
-                    <p class=" ">
+                    <p class=" " style="margin-left: 20px;">
                       <strong>165 & 180 & 200 Sq. Yards </strong>
                     </p>
                   </div>
@@ -543,7 +543,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Location</p>
-                    <p class="ml-3">
+                    <p class=""style="margin-left: 33px;">
                       <strong> Kamkole,  Sadashivpet </strong>
                     </p>
                   </div>
@@ -561,7 +561,7 @@
                     style="border-bottom: 2px solid #070707"
                   >
                     <p class=" ">Plot Sizes</p>
-                    <p class=" "style="mar>
+                    <p class=" " style="margin-left: 20px;">
                       <strong>3,4,5,6 and 7.5 Guntas</strong>
                     </p>
                   </div>
