--- a/index.html
+++ b/index.html
@@ -1127,8 +1127,7 @@
                         
 
 
-                        Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
-                            Company</a> | <a href="privacy-policy.html">Privacy Policy</a>
+                         <a class="border-bottom" href="https://www.thepatternscompany.com/"></a> | <a href="privacy-policy.html">Privacy Policy</a>
                     </div>
                    
                 </div>
