--- a/completed-projects.html
+++ b/completed-projects.html
@@ -206,7 +206,7 @@
                                 style="border-bottom: 2px solid #070707">
                                 <p class=" ">Location</p>
                                 <p class=" ">
-                                    <strong>Kamkole, Sadashivpet </strong>
+                                    <strong>Thagarapu Valasa </strong>
                                 </p>
                             </div>
                             <div class="d-flex align-items-center justify-content-between pt-3"
@@ -296,7 +296,7 @@
                                 style="border-bottom: 2px solid #070707">
                                 <p class=" ">Location</p>
                                 <p class=" ">
-                                    <strong>Kamkole, Sadashivpet </strong>
+                                    <strong>Mela Sangam </strong>
                                 </p>
                             </div>
                             <div class="d-flex align-items-center justify-content-between pt-3"
