--- a/on-going-projects.html
+++ b/on-going-projects.html
@@ -215,7 +215,7 @@
                         >
                           <p class=" ">Location</p>
                           <p class=" ">
-                            <strong> Kamkole, China Chelmeda, Sadashivpet </strong>
+                            <strong> Kamkole Sadashivpet </strong>
                           </p>
                         </div>
                         <div
