--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -146,7 +146,7 @@
             <div class="container   px-lg-5">
                 <div class="row g-5 pt-5">
                     <div class="col-12 text-center text-lg-start">
-                        <h1 class="display-4 text-white animated slideInLeft">Privacy Policy</h1>
+                        <h1 class="display-4 text- animated slideInLeft">Privacy Policy</h1>
                 </div>
             </div>
         </div>
@@ -174,7 +174,8 @@
     </div>
     <!-- Full Screen Search End -->
 
-
+<p>
+    At RajaRoy, we take your privacy seriously and are committed to protecting the personal information you entrust to us. Our privacy policy outlines how we collect, use, disclose, and protect your data in compliance with applicable laws and regulations. We collect only the necessary information required to provide our services and ensure a personalized experience for our users. Your data is securely stored and accessed only by authorized personnel for legitimate business purposes. We do not sell or share your information with third parties without your consent, except as required by law or to fulfill contractual obligations. Our privacy policy is regularly reviewed and updated to reflect changes in legal requirements and industry best practices, ensuring your continued trust and confidence in our services.</p>
 
     <div class="container-xxl gallery">
         <div class="container ">
