--- a/open-plots.html
+++ b/open-plots.html
@@ -193,42 +193,16 @@
                     </div>
                     <div class="col-lg-6  position-relative text-center  pb-4 wow fadeInUp" data-wow-delay="0.1s"
                         style="max-width: 600px;">
-                        <p class="text-lg-start text-white"> Raja Roy Promotors have unveiled a tantalizing opportunity
-                            for real
-                            estate
-                            enthusiasts with their latest venture, Open Mango Plots. Nestled amidst serene landscapes,
-                            these plots offer not just a piece of land but a promise of tranquil living. With meticulous
-                            planning and attention to detail, Raja Roy Promotors have curated these plots to cater to
-                            the discerning tastes of modern homeowners. The allure of these plots lies not only in their
-                            strategic location but also in the promise of a sustainable lifestyle, surrounded by
-                            nature's bounty. Each plot is a canvas awaiting the dreams and aspirations of its owner,
-                            offering a blank slate for architectural marvels or serene retreats. Raja Roy Promotors have
-                            once again proven their commitment to excellence in the real estate realm with Open Mango
-                            Plots, inviting individuals to carve their own piece of paradise in the embrace of nature's
-                            beauty.imagine owning open plots where you can truly immerse yourself in nature and build
-                            your dream retreat. These plots offer the perfect canvas for creating a sanctuary that
-                            harmonizes with the surrounding environment, allowing you to indulge in the tranquility and
-                            beauty of nature.</p>
+                        <p class="text-lg-start text-white"> Raja Roy Promotors introduces an enticing opportunity for real estate aficionados with their latest venture, Open Mango Plots. Situated amidst tranquil landscapes, these plots promise more than just land; they offer a promise of serene living. Crafted with meticulous planning and attention to detail, Raja Roy Promotors have curated these plots to cater to the discerning tastes of modern homeowners. The allure of these plots lies not only in their strategic location but also in the promise of a sustainable lifestyle, surrounded by the bounty of nature. Each plot serves as a canvas, awaiting the dreams and aspirations of its owner, offering a blank slate for architectural marvels or serene retreats. With Open Mango Plots, Raja Roy Promotors reaffirms their commitment to excellence in the real estate realm, inviting individuals to carve their own piece of paradise amidst nature's beauty.
+
+                            Immerse yourself in nature and envision owning open plots that serve as a perfect canvas for creating a sanctuary harmonizing with the surrounding environment.Embrace the opportunity to create your own haven, tailored to your desires and aspirations. Open Mango Plots offer a canvas for crafting the retreat of your dreams amidst nature's serene embrace. </p>
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/image_team.jpg">
                     </div class="col-lg-12">
-                    <p class="text-white"> Whether nestled in lush forests, overlooking serene lakes, or perched atop
-                        rolling hills, these
-                        open plots provide the opportunity to design custom homes or cabins that seamlessly blend indoor
-                        and outdoor living spaces, maximizing views and natural light while minimizing environmental
-                        impact. With ample space for gardens, orchards, and outdoor amenities such as hiking trails,
-                        meditation gardens, or secluded viewpoints, these plots invite you to cultivate a lifestyle that
-                        prioritizes wellness, connection, and inspiration amidst the splendor of the great
-                        outdoors.Moreover, owning open plots allows you to embark on a journey of personal fulfillment
-                        and creative expression as you manifest your vision for your dream retreat. From eco-friendly
-                        and off-grid living solutions to innovative architectural designs that prioritize sustainability
-                        and energy efficiency, the possibilities are endless. Whether you envision a cozy cabin nestled
-                        amidst towering trees, a modern retreat with panoramic windows framing breathtaking vistas, or a
-                        rustic-chic lodge inspired by the surrounding landscape, these open plots offer the freedom to
-                        turn your dreams into reality. Embrace the opportunity to escape the hustle and bustle of city
-                        life, reconnect with nature, and create cherished memories with loved ones in a place that
-                        reflects your values, passions, and aspirations.</p>
+                    <p class="text-white"> These plots offer an opportunity to design custom homes or cabins that seamlessly blend indoor and outdoor living spaces, maximizing views and natural light while minimizing environmental impact. With ample space for gardens, orchards, and outdoor amenities such as hiking trails and meditation gardens, these plots invite you to cultivate a lifestyle that prioritizes wellness, connection, and inspiration amidst the splendor of the great outdoors.
+
+                        Moreover, owning open plots allows for personal fulfillment and creative expression as you manifest your vision for your dream retreat. From eco-friendly and off-grid living solutions to innovative architectural designs prioritizing sustainability and energy efficiency, the possibilities are limitless. Whether envisioning a cozy cabin nestled amidst towering trees, a modern retreat with panoramic windows framing breathtaking vistas, or a rustic-chic lodge inspired by the surrounding landscape, these plots offer the freedom to turn dreams into reality. Escape the city hustle, reconnect with nature, and create cherished memories in a place reflecting your values, passions, and aspirations.</p>
                 </div>
 
 
