--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@
                         With an unwavering commitment to integrity, professionalism, and excellence, RAJA ROY PRAMOTORS has flourished amidst the ever-evolving real estate landscape. Our journey has been characterized by innovation and growth, propelled by our steadfast dedication to personalized service and client satisfaction. At every juncture, we reaffirm our pledge to turn dreams into realities, empowering individuals to achieve their property aspirations with confidence and trust.
                     </p>
                 </div>
-                <div class="col-lg-4" style="height:400px;">
+                <div class="col-lg-4-photo">
                     <img src="./img/open1.png" 
                         class="m-5 wow fadeInUp w-100 h-100" style="max-width: 100%;" data-wow-delay="0.1s" />
                 </div>
