--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h2>Our History</h2>
-                    <h3 class="text-dark">Our Most Efficient Year</h3>
+                    <h3 class="text-dark" style="margin-top: 20px;">Our Most Efficient Year</h3>
                 </div>
                 <div class="col-lg-6 py-3 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class=" m-5 wow " style="color: black;">RAJA ROY PRAMOTORS,2021</h3>
@@ -299,7 +299,7 @@
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="text-dark">OUR ETHICS & VALUES</h3>
                 </div>
-                <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 20px;">
                     <p>Embodying unwavering ethics and values, our foundation at Raja Roy Promoters is built upon a steadfast commitment to integrity. Guided by principles of honesty, transparency, and ethical conduct, every decision and action we undertake is a testament to our dedication to operating with integrity at all times.
 
                         At the heart of our ethos lies a customer-centric approach, where our clients are not just clients but valued partners in our journey. We prioritize their needs, actively listen to their feedback, and consistently deliver on our promises, ensuring their utmost satisfaction and trust in our services.
