--- a/index.html
+++ b/index.html
@@ -238,6 +238,30 @@
                             </div> -->
               </div>
             </div>
+            <div class="hero-header3 container" style="">
+              <div class="row g-5">
+                <div class="col-lg-12 content text-center">
+                  <h1 class="display-4 text-white mb-4 animated slideInLeft">
+                    Welcome to the RAJA ROY PRAMOTORS
+                  </h1>
+                  <p class="text-white animated slideInLeft" style="font-size: 20px;">
+                    
+                       WE ARE TIRELESSLY WORKING TO TURN YOUR DREAMS INTO TANGIBLE REALITIES.
+
+
+
+
+
+                  </p>
+
+                  
+                </div>
+                <!-- <div class="col-lg-6 text-center text-lg-start  hero-img">
+                                <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
+                                    alt="">
+                            </div> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
