--- a/contact.html
+++ b/contact.html
@@ -183,11 +183,11 @@
 
 
         <!-- Contact Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5" style="background-color:olive" >
             <div class="container px-lg-5">
                 <div class="row section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Contact For Any Query</h1>
+                    <h1 class="mb-3" style="color: #ffff;">Contact For Any Query</h1>
 
                     
                     
@@ -240,14 +240,14 @@
                     </div>
                     <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="section-title position-relative mx-auto mb-4 pb-4">
-                            <h3 class="fw-bold mb-0 text-dark">Customer Support</h3>
+                            <h3 class="fw-bold mb-0 text">Customer Support</h3>
                         </div>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>402, MATHRUSREE HOMES
+                        <p class="mb-2" style="color: #ffff;"><i class="fa fa-map-marker-alt text-primary me-3" ></i>402, MATHRUSREE HOMES
                             APARTMENTS, MATHRUSREE NAGAR
                             MIYAPUR, HYDERABAD, 500049</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8885667888</p>
-                        <p class="mb-2"> Mon - Sun: 09am - 07pm</p>
-                        <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>rajaroypramotors21@gmail.com</p>
+                        <p class="mb-2" style="color: #ffff;"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8885667888</p>
+                        <p class="mb-2" style="color: #ffff;"> Mon - Sun: 09am - 07pm</p>
+                        <p class="mb-2" style="color: #ffff;"><i class="fa fa-envelope text-primary me-3" ></i>rajaroypramotors21@gmail.com</p>
                         <div class="border rounded text-center p-4 mt-4">
                             <h3 class="fw-bold mb-4">Need Any Help?</h3>
                             <a class="btn btn-primary py-3 px-5" href="">Let's Chat</a>
