--- a/on-going-projects.html
+++ b/on-going-projects.html
@@ -148,7 +148,7 @@
             <div class="container my-5 py-5 px-lg-5">
                 <div class="row g-5 pt-5">
                     <div class="col-12 text-center text-lg-start">
-                        <h1 class="display-4 text-white animated slideInLeft">On Going Projects</h1>
+                        <h1 class="display-4 text-white animated slideInLeft">On Going Project</h1>
 
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                 animation-duration: 2s;
                 animation-delay: 0s;
               ">
-                            Projects
+                            Project
                         </h2>
                     </div>
                 </div>
