--- a/farm-lands.html
+++ b/farm-lands.html
@@ -199,7 +199,7 @@
 
 
 
-                        <p class="mb-1 text-lg-start text-white">
+                        <p class="mb-1 text-lg-start text-white" style="text-align: justify;">
                            
 Raja Roy Promotors presents a unique opportunity for those seeking a connection with nature through their latest project, Green Haven Farms. Nestled within the tranquil countryside, these farm lands offer more than just agricultural space; they provide a gateway to sustainable living and a deep-rooted connection to the land. With careful planning and a commitment to environmental stewardship, Raja Roy Promotors have meticulously curated these farms to cater to the needs of modern farmers and eco-conscious individuals alike.
 
