--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    
 
     <!-- Favicon -->
     <link href="img/logo1.png" rel="icon">
@@ -253,6 +254,7 @@
         </div>
         <!-- History end -->
         <!-- Vision Start-->
+        <div class="about-images">
         <div class="container" style="background-color: #162411;">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
@@ -266,7 +268,7 @@
 
                         Join us at Vision Real Estate as we lead the charge towards a more vibrant and sustainable tomorrow. Experience the difference with our community-centric approach and environmentally conscious practices, and together, let's shape a future where excellence, innovation, and sustainability go hand in hand.</p>
                 </div>
-                <div class="col-lg-6"><img src="./img/vision2.jpg" style="height:500px;" class="m-5 wow fadeInUp"
+                <div class="col-lg-6" style="object-fit:contain;"><img src="./img/vision2.jpg" style="height:500px"  class="m-5 wow fadeInUp"
                         data-wow-delay="0.1s" /></div>
             </div>
         </div>
@@ -317,6 +319,7 @@
                         data-wow-delay="0.1s" /></div>
             </div>
         </div>
+      </div>
         <!-- Comparison Start -->
         <div class="container-xxl py-5 why" style="background-color: #162411;">
             <div class="container px-lg-5">
